test/runnable/alias.d
/**********************************************/

struct Test1
{
	void f(){}
	alias f f;
}

/**********************************************/

struct Test2
{
	void f(){}
	alias f f;
	alias f f;
}

/**********************************************/

struct Test3
{
	alias f f;
	void f(){}
}

/**********************************************/

struct Test4
{
	alias f f;
	alias f f;
	void f(){}
}

/**********************************************/

void main()
{
}
